# EVO-ALGO

./: .gitignore  Claude-EVO-plan.txt  DEBUG-README.md  DEEPCOMMS.txt  DOCUMENTATION.md  ENHANCED_README.md  ENHANCEMENT_PROJECT.md  EVO-ALGO.txt  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_SUMMARY.md  QUICK_START_GUIDE.md  README.md  TRISOLARIS-ENHANCEMENTS.md  TRISOLARIS-IMPROVEMENTS.md  TRISOLARIS-UPDATES.md  adaptive_tweaker.py  adaptive_tweaker_fix.py  benchmark_evolution.py  bluetooth_scanner.py  credentials.json  debug_bluetooth_scanner.py  debug_drive_scanner.py  debug_network_scanner.py  desktop_organizer.py  diagnose_progremon.py  documentation_update_plan.md  drive_scanner.py  enhanced_trisolaris_demo.py  enhanced_trisolaris_demo_fixed.py  enhancement_project_plan.md  evolution_session.py  evolve_bluetooth_scanner.py  evolve_desktop_organizer.py  evolve_drive_scanner_task.py  evolve_network_scanner.py  evolved_net_scanner.py  first 10 percent of evolutionary-dynamics.txt  intro-evo-coding.txt  launch_progremon.py  launch_webhook_server.sh  (+38 more)
.clinerules/: Claude-CLINE-TRISOLARIS-1.md
GAURAV/: Do The Raps dot are tea eff.rtf.docx  VVVVV.rtf  VVVVV.txt  VVVVV_chunk_2.txt  VVVVV_chunk_5.txt  VVVVV_chunk_6.txt  mool_manifest.txt
demo_output/: best_gen_2.py  evolution_metrics.json
desktop_organizer_task/: desktop_organizer_task.py
evolution_metrics/: metrics_gen_1.json
evolved_output/: best.py
evolved_solutions/: desktop_organizer.py
examples/: config_example.py  drive_scanner_task_example.py  evolve_sorting.py  mutation_smoke_test.py  text_sorting_evolution.py  (+1 more)
(+341 files in other folders)
